[package]
name = "cobaltic"
version = "2.0.0"
description = "An easy to use Fortnite downloader"
authors = ["jwhazy"]
license = "GPL-3.0"
repository = "https://github.com/jackstadevelopment/cobaltic/tree/dev"
default-run = "cobaltic"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
reqwest = { version = "0.11", features = ["json"] }
platform-dirs = "0.3.0"
open = "3.0.1"
error-chain = "0.12.4"
downloader = "0.2.6"
tokio = "1.19.2"
duct = "0.13.5"
chrono = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
