[package]
name = "cobaltic"
version = "2.0.0"
description = ""
authors = ["jacksta"]
license = "GPLv3"
repository = "https://github.com/jwhazy/cobaltic"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "process-command-api", "process-exit", "shell-open", "window-create", "window-minimize", "window-start-dragging"] }
window-shadows = "0.2.1"
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features = ["colored"] }
window-vibrancy = "0.3.2"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = "0.11.14"
dirs = "4.0.0"
downloader = "0.2.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
